~ Extend Object class with automatic parameter calculation

18/12/2020:
===========
~ Add Scalar Multiplication Tests for Vector Coordinates
~ Add Ray Intersection Calculations for Ray Tracing
~ Add Min/Max functions for Ray bounds testing

22/12/2020:
===========
~ Add gitattributes file to ensure cross-platform development on Windows and Linux
~ Fixed the test cases for Matrix Operations

23/12/2020:
===========
~ Separate All Matrix Operations and Ray Tracing Operations into MatrixOperations.h

28/12/2020:
===========
~ Added Rorate along the x,y,and z-axis
~ Added custom round function as std::round rounded to integers, which I didn't particularly enjoy

30/12/2020:
===========
~ Fixed Tests for Within_Bounds and Within_Plane
~ Fixed Tests and functions for Ray Intersection calculation
~ Added Rasterization of Rays to return 1/d as pixel brightness
~ Added some tests for ray rasterization - will add more later
~ Added Ray colour getters (colour of the object based on distance)
~ Added Tests for Ray Colours
~ Added "Colour Math" with the help of Pythagoras (Very likely incorrect)
    using barycentric coordinates

31/12/2020:
===========
~ Find the new colour values based on where the points are on the triangle
~ Add barycentric colour calculator function

To Add:
=======
~ Profile code. will likey have to change vector inputs to const std::vector<type> & later.
~ Add coordinate movement funcitons via addition of additional vectors - required for movement of scenery
~ Add in testing whether the point is on the plane with the help of barycentric coordinates
~ Change some of the more heavily called functions to not return a value, but rather return by reference.
    This will make the functions longer, but will help in speed later. This can help with at least 30% increase in speed

~ Specularity   (Coordinate)
~ Roughness     (Coordinate)
~ Reflection    (Coordinate)
~ Light Absorbtion  (Coordinate)